salesforce/force-app/main/default/objects/Data_Stream_Profile__mdt/Data_Stream_Profile__mdt.object-meta.xml
<CustomObject>
    <label>Data Stream Profile</label>
    <pluralLabel>Data Stream Profiles</pluralLabel>
</CustomObject>