salesforce/force-app/main/default/objects/Data_Stream_Profile__mdt/fields/Import_Directory__c.field-meta.xml
<CustomField>
    <fullName>Import_Directory__c</fullName>
    <label>Import Directory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>