salesforce/force-app/main/default/objects/Data_Stream_Profile__mdt/fields/Refresh_Mode__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Mode__c</fullName>
    <label>Refresh Mode</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>