salesforce/force-app/main/default/objects/Data_Stream_Profile__mdt/fields/Stream_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Stream_Record_Id__c</fullName>
    <label>Stream Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>